<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderAddActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnMenuCancel"
            android:text="@string/Cancel"
            android:textSize="16sp"
            android:layout_width="70dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tvDeskNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="32sp"
            android:text="@string/DeskNum"/>

        <Button
            android:id="@+id/btnMenuOk"
            android:text="@string/Ok"
            android:textSize="16sp"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <fragment
            android:id="@+id/menuList"
            class="com.example.tony.myapplication.MenuListFragment"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/MenuInfo"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="?android:attr/detailsElementBackground" />

    </LinearLayout>



</LinearLayout>